Make sure header overlaps content

--- a/src/web/components/Header/header.css
+++ b/src/web/components/Header/header.css
@@ -2,6 +2,7 @@
 
 .root {
   position: fixed;
+  z-index: 2;
   top: 0; left: 0; right: 0;
   height: var(--headerHeight);
 
